verification OTP button align issue fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1653,7 +1653,7 @@ select {
   padding: 20px;
   border-top: 1px solid #dee2e6;
   margin-top: 10px;
-  justify-content: end;
+  justify-content: space-between;
 }
 
 .downloadplan {
